# voice-adapter

./: pyproject.toml
voice-adapter/: SNACGeneratorInferenceScript.py  SNACGeneratorModel.py  TrainingPhase1.py
voice-adapter/dataset/: DatasetPreprocessorAndEmbeddingGenerator.py  PytorchMetadataAnalysis.py
